Added 2nd Section

--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@
         </div>
     </header>
 
-    <section>
-        <div class="my-about half-width">
-            <h2><span>Mustafizur</span>Rahman</h2>
+    <section class="about-area">
+        <div class="half-width">
+            <h2><span class="name">Mustafizur</span> Rahman</h2>
             <p>Hi, I'm a Professional Web Designer and Web Developer with +2 years of solid experience in developing dynamic responsive wp websites, HTML-5, CSS-3, Bootstrap, jquery, JavaScript, PHP, MySQL, WordPress, and WordPress Theme Development, .I have my own developed premium themes. I'm also a web security expert since 2018. I worked with too many companies as a full-stack Web developer. I can ensure you that, I can give you very professional, fully secure, fast, User, and SEO-friendly websites. I hope you will get full encouraged to hire me for your wonderful project. Thank You So Much.</p>
-            <button class="btn"><a href="singup.html">Login Or Sign Up</a></button>
+            <button class="btn-hover color-1"><a href="#">Hire Me</a></button>
         </div>
-        <div class="my-pic half-width">
-            <img src="image/mypic.JPG" alt="This Is Me">
+        <div class="half-width">
+            <img src="image/reo.png" alt="This Is Me">
         </div>
     </section>
 </body>
-
 </html>
