change Simple title

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
 
-    <section class="about-area">
+    <section class="about-area" id="about-me">
         <div class="half-width">
             <h2><span class="name">Mustafizur</span> Rahman</h2>
             <p>Hi, I'm a Professional Web Designer and Web Developer with +2 years of solid experience in developing dynamic responsive wp websites, HTML-5, CSS-3, Bootstrap, jquery, JavaScript, PHP, MySQL, WordPress, and WordPress Theme Development, .I have my own developed premium themes. I'm also a web security expert since 2018. I worked with too many companies as a full-stack Web developer. I can ensure you that, I can give you very professional, fully secure, fast, User, and SEO-friendly websites. I hope you will get full encouraged to hire me for your wonderful project. Thank You So Much.</p>
@@ -49,5 +49,17 @@
             <img src="image/reo.png" alt="This Is Me">
         </div>
     </section>
+
+    <section>
+        <div class="container">
+            <div class="padding">
+                <div class="main-title">
+                    <h2>My Skills</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
